v1/src/com/mindfulthinktank/k/language/v1/KlangParser.java
// Generated from S:\cloud\mindfulthinktank\GitHub\k\v1\src\com\mindfulthinktank\k\language\v1\Klang.g4 by ANTLR 4.1
package com.mindfulthinktank.k.language.v1;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KlangParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__25=1, T__24=2, T__23=3, T__22=4, T__21=5, T__20=6, T__19=7, T__18=8, 
		T__17=9, T__16=10, T__15=11, T__14=12, T__13=13, T__12=14, T__11=15, T__10=16, 
		T__9=17, T__8=18, T__7=19, T__6=20, T__5=21, T__4=22, T__3=23, T__2=24, 
		T__1=25, T__0=26, ABSTRACT=27, ASSERT=28, BOOLEAN=29, BREAK=30, BYTE=31, 
		CASE=32, CATCH=33, CHAR=34, CLASS=35, CONST=36, CONTINUE=37, DEFAULT=38, 
		DO=39, DOUBLE=40, ELSE=41, ENUM=42, EXTENDS=43, FINAL=44, FINALLY=45, 
		FLOAT=46, FOR=47, IF=48, GOTO=49, IMPLEMENTS=50, IMPORT=51, INSTANCEOF=52, 
		INT=53, INTERFACE=54, LONG=55, NATIVE=56, NEW=57, PACKAGE=58, PRIVATE=59, 
		PROTECTED=60, PUBLIC=61, RETURN=62, SHORT=63, STATIC=64, STRICTFP=65, 
		SUPER=66, SWITCH=67, SYNCHRONIZED=68, THIS=69, THROW=70, THROWS=71, TRANSIENT=72, 
		TRY=73, VOID=74, VOLATILE=75, WHILE=76, IntegerLiteral=77, FloatingPointLiteral=78, 
		BooleanLiteral=79, CharacterLiteral=80, StringLiteral=81, NullLiteral=82, 
		LPAREN=83, RPAREN=84, LBRACE=85, RBRACE=86, LBRACK=87, RBRACK=88, SEMI=89, 
		COMMA=90, DOT=91, ASSIGN=92, GT=93, LT=94, BANG=95, TILDE=96, QUESTION=97, 
		COLON=98, EQUAL=99, LE=100, GE=101, NOTEQUAL=102, AND=103, OR=104, INC=105, 
		DEC=106, ADD=107, SUB=108, MUL=109, DIV=110, BITAND=111, BITOR=112, CARET=113, 
		MOD=114, ADD_ASSIGN=115, SUB_ASSIGN=116, MUL_ASSIGN=117, DIV_ASSIGN=118, 
		AND_ASSIGN=119, OR_ASSIGN=120, XOR_ASSIGN=121, MOD_ASSIGN=122, LSHIFT_ASSIGN=123, 
		RSHIFT_ASSIGN=124, URSHIFT_ASSIGN=125, Identifier=126, AT=127, ELLIPSIS=128, 
		WS=129, NL=130, COMMENT=131, LINE_COMMENT=132;
	public static final String[] tokenNames = {
		"<INVALID>", "'character'", "'integers'", "'stack'", "'collection'", "'priority queue'", 
		"'characters'", "'shorts'", "'print'", "'bytes'", "'matrix'", "'doubles'", 
		"'queue'", "'of'", "'numbers'", "'array'", "'set'", "'booleans'", "'strings'", 
		"'longs'", "'list'", "'binary tree'", "'number'", "'floats'", "'integer'", 
		"'tree'", "'string'", "'abstract'", "'assert'", "'boolean'", "'break'", 
		"'byte'", "'case'", "'catch'", "'char'", "'class'", "'const'", "'continue'", 
		"'default'", "'do'", "'double'", "'else'", "'enum'", "'extends'", "'final'", 
		"'finally'", "'float'", "'for'", "'if'", "'goto'", "'implements'", "'import'", 
		"'instanceof'", "'int'", "'interface'", "'long'", "'native'", "'new'", 
		"'package'", "'private'", "'protected'", "'public'", "'return'", "'short'", 
		"'static'", "'strictfp'", "'super'", "'switch'", "'synchronized'", "'this'", 
		"'throw'", "'throws'", "'transient'", "'try'", "'void'", "'volatile'", 
		"'while'", "IntegerLiteral", "FloatingPointLiteral", "BooleanLiteral", 
		"CharacterLiteral", "StringLiteral", "'null'", "'('", "')'", "'{'", "'}'", 
		"'['", "']'", "';'", "','", "'.'", "'='", "'>'", "'<'", "'!'", "'~'", 
		"'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", "'++'", 
		"'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", "'+='", 
		"'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", 
		"'>>>='", "Identifier", "'@'", "'...'", "WS", "NL", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_compilationUnit = 0, RULE_type = 1, RULE_primitiveType = 2, RULE_primitiveCollectionType = 3, 
		RULE_primitiveCollection = 4, RULE_primitiveTypePlural = 5, RULE_qualifiedName = 6, 
		RULE_literal = 7, RULE_statement = 8, RULE_parExpression = 9, RULE_expressionList = 10, 
		RULE_statementExpression = 11, RULE_constantExpression = 12, RULE_expression = 13, 
		RULE_primary = 14;
	public static final String[] ruleNames = {
		"compilationUnit", "type", "primitiveType", "primitiveCollectionType", 
		"primitiveCollection", "primitiveTypePlural", "qualifiedName", "literal", 
		"statement", "parExpression", "expressionList", "statementExpression", 
		"constantExpression", "expression", "primary"
	};

	@Override
	public String getGrammarFileName() { return "Klang.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public KlangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompilationUnitContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode EOF() { return getToken(KlangParser.EOF, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KlangVisitor ) return ((KlangVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==8 || _la==NL) {
				{
				{
				setState(30); statement();
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KlangVisitor ) return ((KlangVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); primitiveType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitiveTypeContext extends ParserRuleContext {
		public PrimitiveTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).enterPrimitiveType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).exitPrimitiveType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KlangVisitor ) return ((KlangVisitor<? extends T>)visitor).visitPrimitiveType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitiveTypeContext primitiveType() throws RecognitionException {
		PrimitiveTypeContext _localctx = new PrimitiveTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_primitiveType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 22) | (1L << 24) | (1L << 26) | (1L << BOOLEAN) | (1L << BYTE) | (1L << DOUBLE) | (1L << FLOAT) | (1L << LONG) | (1L << SHORT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitiveCollectionTypeContext extends ParserRuleContext {
		public PrimitiveTypePluralContext primitiveTypePlural() {
			return getRuleContext(PrimitiveTypePluralContext.class,0);
		}
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public PrimitiveCollectionContext primitiveCollection() {
			return getRuleContext(PrimitiveCollectionContext.class,0);
		}
		public PrimitiveCollectionTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveCollectionType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).enterPrimitiveCollectionType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).exitPrimitiveCollectionType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KlangVisitor ) return ((KlangVisitor<? extends T>)visitor).visitPrimitiveCollectionType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitiveCollectionTypeContext primitiveCollectionType() throws RecognitionException {
		PrimitiveCollectionTypeContext _localctx = new PrimitiveCollectionTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_primitiveCollectionType);
		try {
			setState(49);
			switch (_input.LA(1)) {
			case 3:
			case 4:
			case 5:
			case 10:
			case 12:
			case 15:
			case 16:
			case 20:
			case 21:
			case 25:
				enterOuterAlt(_localctx, 1);
				{
				setState(42); primitiveCollection();
				setState(43); match(13);
				setState(44); primitiveTypePlural();
				}
				break;
			case 1:
			case 22:
			case 24:
			case 26:
			case BOOLEAN:
			case BYTE:
			case DOUBLE:
			case FLOAT:
			case LONG:
			case SHORT:
				enterOuterAlt(_localctx, 2);
				{
				setState(46); primitiveType();
				setState(47); primitiveCollection();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitiveCollectionContext extends ParserRuleContext {
		public PrimitiveCollectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveCollection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).enterPrimitiveCollection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).exitPrimitiveCollection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KlangVisitor ) return ((KlangVisitor<? extends T>)visitor).visitPrimitiveCollection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitiveCollectionContext primitiveCollection() throws RecognitionException {
		PrimitiveCollectionContext _localctx = new PrimitiveCollectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_primitiveCollection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 4) | (1L << 5) | (1L << 10) | (1L << 12) | (1L << 15) | (1L << 16) | (1L << 20) | (1L << 21) | (1L << 25))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitiveTypePluralContext extends ParserRuleContext {
		public PrimitiveTypePluralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveTypePlural; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).enterPrimitiveTypePlural(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).exitPrimitiveTypePlural(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KlangVisitor ) return ((KlangVisitor<? extends T>)visitor).visitPrimitiveTypePlural(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitiveTypePluralContext primitiveTypePlural() throws RecognitionException {
		PrimitiveTypePluralContext _localctx = new PrimitiveTypePluralContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_primitiveTypePlural);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 6) | (1L << 7) | (1L << 9) | (1L << 11) | (1L << 14) | (1L << 17) | (1L << 18) | (1L << 19) | (1L << 23))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QualifiedNameContext extends ParserRuleContext {
		public TerminalNode Identifier(int i) {
			return getToken(KlangParser.Identifier, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(KlangParser.Identifier); }
		public QualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).enterQualifiedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KlangListener ) ((KlangListener)listener).exitQualifiedName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KlangVisitor ) return ((KlangVisitor<? extends T>)visitor).visitQualifiedName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QualifiedNameContext qualifiedName() throws RecognitionException {
		QualifiedNameContext _localctx = new QualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_qualifiedName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); match(Identifier);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(56); match(DOT);
				setState(57); match(Identifier);
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
